Analyzer.java
/* Generated By:JavaCC: Do not edit this line. Analyzer.java */
import java.lang.*;
import java.util.HashMap;
import java.util.Map;

public class Analyzer implements AnalyzerConstants {
    static HashMap <String, Object> hashMap = new HashMap <String, Object> ();

    public static void main (String args[]) throws ParseException{
        Analyzer miniJavaAnalizer=new Analyzer(System.in);
        miniJavaAnalizer.Program();
        printTable();
                System.out.println("Compilacion exitosa");
    }


public static void insert(String id, String dataType, String category, String size){
    Symbol symbol = new Symbol(id , dataType, category, size);
    hashMap.put(id,symbol);
}

public static void busqueda(String id){
if (hashMap.containsKey(id)) {
    Symbol symbolFound = (Symbol) hashMap.get(id);
    System.out.println("Found: "+symbolFound.toString());
}else{
     System.out.println("Not found");
}
}


public static void delete(String id){
    hashMap.remove(id);
}

public static void printTable(){
    System.out.println("----------------------");
    System.out.println("TABLA DE SIMBOLOS: ");
    for (String i : hashMap.keySet()) {
        System.out.println(hashMap.get(i));
    }
}


public static class Symbol {
 String id, dataType, category, size;
        public Symbol(String id, String dataType, String category, String size){
                this.id=id;
                this.dataType=dataType;
        this.category=category;
        this.size=size;
        }

    String getId(){
        return id;
    }
    String getDataType(){
        return dataType;
    }
    String getCategory(){
        return category;
    }
    String getSize(){
        return size;
    }

    public String toString(){
    return getId()+ "-" + getDataType()+ "-" + getCategory()+ "-" + getSize();
  }
}

/*
*****************************SINTAXIS*****************************
*/
  static final public void Program() throws ParseException {
    MainClass();
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case classToken:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      ClassDeclaration();
    }
    jj_consume_token(0);
  }

  static final public void MainClass() throws ParseException {
    jj_consume_token(classToken);
    jj_consume_token(idToken);
                       String image=token.image;
insert(image, "void", "clase", "0");
    jj_consume_token(openedCurlyBracketsToken);
    jj_consume_token(publicToken);
    jj_consume_token(staticToken);
    jj_consume_token(voidToken);
    jj_consume_token(mainToken);
    jj_consume_token(openedParenthesisToken);
    jj_consume_token(stringToken);
    jj_consume_token(openedBraceToken);
    jj_consume_token(closedBraceToken);
    jj_consume_token(idToken);
          image=token.image;
insert(image, "void", "arreglo", "0");
    jj_consume_token(closedParenthesisToken);
    jj_consume_token(openedCurlyBracketsToken);
    Statement();
    jj_consume_token(closedCurlyBracketsToken);
    jj_consume_token(closedCurlyBracketsToken);
  }

  static final public void ClassDeclaration() throws ParseException {
    jj_consume_token(classToken);
    jj_consume_token(idToken);
 String image=token.image;
insert(image, "void", "clase", "0");
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case extendsToken:
      jj_consume_token(extendsToken);
      jj_consume_token(idToken);
      break;
    default:
      jj_la1[1] = jj_gen;
      ;
    }
    jj_consume_token(openedCurlyBracketsToken);
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case stringToken:
      case intToken:
      case booleanToken:
      case floatToken:
      case idToken:
        ;
        break;
      default:
        jj_la1[2] = jj_gen;
        break label_2;
      }
      VarDeclaration();
    }
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case publicToken:
        ;
        break;
      default:
        jj_la1[3] = jj_gen;
        break label_3;
      }
      MethodDeclaration();
    }
    jj_consume_token(closedCurlyBracketsToken);
  }

  static final public void VarDeclaration() throws ParseException {
                       String type; String image; int tam=0;
    type = Type();
    jj_consume_token(idToken);
 image=token.image;
if(type.equals("arreglo-float"))insert(image, "float", "arreglo", tam+"");
else if(type.equals("arreglo-int"))insert(image, "int", "arreglo", tam+"");
else insert(image, type, "variable", "0");
tam++;
    TwoOrMoreVar();
    jj_consume_token(semiColonToken);
  }

  static final public void TwoOrMoreVar() throws ParseException {
    label_4:
    while (true) {
      if (jj_2_1(2)) {
        ;
      } else {
        break label_4;
      }
      jj_consume_token(commaToken);
      jj_consume_token(idToken);
    }
  }

  static final public void MethodDeclaration() throws ParseException {
                          String type; int tam=0;
    jj_consume_token(publicToken);
    type = Type();
    jj_consume_token(idToken);
                                    String imageMethod=token.image;
    jj_consume_token(openedParenthesisToken);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case stringToken:
    case intToken:
    case booleanToken:
    case floatToken:
    case idToken:
      type = Type();
      jj_consume_token(idToken);
                                                String image=token.image;
if(type.equals("arreglo-float"))insert(image, "float", "arreglo", "0");
else if(type.equals("arreglo-int"))insert(image, "int", "arreglo", "0");
else insert(image, type, "variable", "0");
tam++;
      label_5:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case commaToken:
          ;
          break;
        default:
          jj_la1[4] = jj_gen;
          break label_5;
        }
        jj_consume_token(commaToken);
        type = Type();
        jj_consume_token(idToken);
                                       image=token.image;
if(type.equals("arreglo-float"))insert(image, "float", "arreglo", "0");
else if(type.equals("arreglo-int"))insert(image, "int", "arreglo", "0");
else insert(image, type, "variable", "0");
tam++;
      }
      break;
    default:
      jj_la1[5] = jj_gen;
      ;
    }
 insert(imageMethod, type, "Funcion", tam+"");
    jj_consume_token(closedParenthesisToken);
    jj_consume_token(openedCurlyBracketsToken);
    label_6:
    while (true) {
      if (jj_2_2(2)) {
        ;
      } else {
        break label_6;
      }
      VarDeclaration();
    }
    label_7:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ifToken:
      case whileToken:
      case soutToken:
      case openedCurlyBracketsToken:
      case idToken:
        ;
        break;
      default:
        jj_la1[6] = jj_gen;
        break label_7;
      }
      Statement();
    }
    jj_consume_token(returnToken);
    Expression();
    jj_consume_token(semiColonToken);
    jj_consume_token(closedCurlyBracketsToken);
  }

  static final public String Type() throws ParseException {
    if (jj_2_3(2)) {
      jj_consume_token(intToken);
      jj_consume_token(openedBraceToken);
      jj_consume_token(closedBraceToken);
                                                               {if (true) return "arreglo-int";}
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case booleanToken:
        jj_consume_token(booleanToken);
                 {if (true) return "boolean";}
        break;
      case intToken:
        jj_consume_token(intToken);
                                                  {if (true) return "int";}
        break;
      default:
        jj_la1[7] = jj_gen;
        if (jj_2_4(2)) {
          jj_consume_token(floatToken);
                                                                                             {if (true) return "float";}
        } else {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case stringToken:
            jj_consume_token(stringToken);
                                                                                                                               {if (true) return "String";}
            break;
          case idToken:
            jj_consume_token(idToken);
            {if (true) return token.image;}
            break;
          case floatToken:
            jj_consume_token(floatToken);
            jj_consume_token(openedBraceToken);
            jj_consume_token(closedBraceToken);
                                                      {if (true) return "arreglo-float";}
            break;
          default:
            jj_la1[8] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        }
      }
    }
    throw new Error("Missing return statement in function");
  }

  static final public void Statement() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case openedCurlyBracketsToken:
      jj_consume_token(openedCurlyBracketsToken);
      label_8:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case ifToken:
        case whileToken:
        case soutToken:
        case openedCurlyBracketsToken:
        case idToken:
          ;
          break;
        default:
          jj_la1[9] = jj_gen;
          break label_8;
        }
        Statement();
      }
      jj_consume_token(closedCurlyBracketsToken);
      break;
    case ifToken:
      jj_consume_token(ifToken);
      jj_consume_token(openedParenthesisToken);
      Expression();
      jj_consume_token(closedParenthesisToken);
      Statement();
      jj_consume_token(elseToken);
      Statement();
      break;
    case whileToken:
      jj_consume_token(whileToken);
      jj_consume_token(openedParenthesisToken);
      Expression();
      jj_consume_token(closedParenthesisToken);
      Statement();
      break;
    case soutToken:
      jj_consume_token(soutToken);
      jj_consume_token(openedParenthesisToken);
      Expression();
      jj_consume_token(closedParenthesisToken);
      jj_consume_token(semiColonToken);
      break;
    default:
      jj_la1[10] = jj_gen;
      if (jj_2_5(2)) {
        jj_consume_token(idToken);
        jj_consume_token(equalsToken);
        Expression();
        jj_consume_token(semiColonToken);
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case idToken:
          jj_consume_token(idToken);
          jj_consume_token(openedBraceToken);
          Expression();
          jj_consume_token(closedBraceToken);
          jj_consume_token(equalsToken);
          Expression();
          jj_consume_token(semiColonToken);
          break;
        default:
          jj_la1[11] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
  }

  static final public void Expression() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case intConstToken:
      jj_consume_token(intConstToken);
      ExpressionPrime();
      break;
    case realConstToken:
      jj_consume_token(realConstToken);
      ExpressionPrime();
      break;
    case trueToken:
      jj_consume_token(trueToken);
      ExpressionPrime();
      break;
    case falseToken:
      jj_consume_token(falseToken);
      ExpressionPrime();
      break;
    case idToken:
      jj_consume_token(idToken);
      ExpressionPrime();
      break;
    case thisToken:
      jj_consume_token(thisToken);
      ExpressionPrime();
      break;
    default:
      jj_la1[12] = jj_gen;
      if (jj_2_6(2)) {
        jj_consume_token(newToken);
        jj_consume_token(intToken);
        jj_consume_token(openedBraceToken);
        Expression();
        jj_consume_token(closedBraceToken);
        ExpressionPrime();
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case newToken:
          jj_consume_token(newToken);
          jj_consume_token(idToken);
          jj_consume_token(openedParenthesisToken);
          jj_consume_token(closedParenthesisToken);
          ExpressionPrime();
          break;
        case notToken:
          jj_consume_token(notToken);
          Expression();
          ExpressionPrime();
          break;
        case openedParenthesisToken:
          jj_consume_token(openedParenthesisToken);
          Expression();
          jj_consume_token(closedParenthesisToken);
          ExpressionPrime();
          break;
        default:
          jj_la1[13] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
  }

  static final public void ExpressionPrime() throws ParseException {
    label_9:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case openedBraceToken:
      case comparationToken:
      case andToken:
      case orToken:
      case lessThanToken:
      case moreThanToken:
      case lessOrEqualThanToken:
      case moreOrEqualThanToken:
      case plusToken:
      case minusToken:
      case multiplicationToken:
      case divisionToken:
      case dotToken:
        ;
        break;
      default:
        jj_la1[14] = jj_gen;
        break label_9;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case comparationToken:
      case andToken:
      case orToken:
      case lessThanToken:
      case moreThanToken:
      case lessOrEqualThanToken:
      case moreOrEqualThanToken:
      case plusToken:
      case minusToken:
      case multiplicationToken:
      case divisionToken:
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case andToken:
          jj_consume_token(andToken);
          break;
        case orToken:
          jj_consume_token(orToken);
          break;
        case lessThanToken:
          jj_consume_token(lessThanToken);
          break;
        case moreThanToken:
          jj_consume_token(moreThanToken);
          break;
        case lessOrEqualThanToken:
          jj_consume_token(lessOrEqualThanToken);
          break;
        case moreOrEqualThanToken:
          jj_consume_token(moreOrEqualThanToken);
          break;
        case plusToken:
          jj_consume_token(plusToken);
          break;
        case minusToken:
          jj_consume_token(minusToken);
          break;
        case multiplicationToken:
          jj_consume_token(multiplicationToken);
          break;
        case divisionToken:
          jj_consume_token(divisionToken);
          break;
        case comparationToken:
          jj_consume_token(comparationToken);
          break;
        default:
          jj_la1[15] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        Expression();
        ExpressionPrime();
        break;
      default:
        jj_la1[18] = jj_gen;
        if (jj_2_7(5)) {
          jj_consume_token(openedBraceToken);
          Expression();
          jj_consume_token(closedBraceToken);
          ExpressionPrime();
        } else if (jj_2_8(2)) {
          jj_consume_token(dotToken);
          jj_consume_token(lengthToken);
          ExpressionPrime();
        } else if (jj_2_9(2)) {
          jj_consume_token(dotToken);
          jj_consume_token(idToken);
          jj_consume_token(openedParenthesisToken);
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case trueToken:
          case falseToken:
          case thisToken:
          case newToken:
          case openedParenthesisToken:
          case notToken:
          case idToken:
          case realConstToken:
          case intConstToken:
            Expression();
            label_10:
            while (true) {
              switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
              case commaToken:
                ;
                break;
              default:
                jj_la1[16] = jj_gen;
                break label_10;
              }
              jj_consume_token(commaToken);
              Expression();
            }
            break;
          default:
            jj_la1[17] = jj_gen;
            ;
          }
          jj_consume_token(closedParenthesisToken);
          ExpressionPrime();
        } else {
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
  }

  static private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  static private boolean jj_2_2(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  static private boolean jj_2_3(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_3(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  static private boolean jj_2_4(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_4(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  static private boolean jj_2_5(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_5(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  static private boolean jj_2_6(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_6(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(5, xla); }
  }

  static private boolean jj_2_7(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_7(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(6, xla); }
  }

  static private boolean jj_2_8(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_8(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(7, xla); }
  }

  static private boolean jj_2_9(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_9(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(8, xla); }
  }

  static private boolean jj_3_5() {
    if (jj_scan_token(idToken)) return true;
    if (jj_scan_token(equalsToken)) return true;
    return false;
  }

  static private boolean jj_3R_29() {
    if (jj_scan_token(floatToken)) return true;
    if (jj_scan_token(openedBraceToken)) return true;
    return false;
  }

  static private boolean jj_3R_28() {
    if (jj_scan_token(idToken)) return true;
    return false;
  }

  static private boolean jj_3R_25() {
    if (jj_scan_token(booleanToken)) return true;
    return false;
  }

  static private boolean jj_3R_14() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_3()) {
    jj_scanpos = xsp;
    if (jj_3R_25()) {
    jj_scanpos = xsp;
    if (jj_3R_26()) {
    jj_scanpos = xsp;
    if (jj_3_4()) {
    jj_scanpos = xsp;
    if (jj_3R_27()) {
    jj_scanpos = xsp;
    if (jj_3R_28()) {
    jj_scanpos = xsp;
    if (jj_3R_29()) return true;
    }
    }
    }
    }
    }
    }
    return false;
  }

  static private boolean jj_3_3() {
    if (jj_scan_token(intToken)) return true;
    if (jj_scan_token(openedBraceToken)) return true;
    return false;
  }

  static private boolean jj_3_1() {
    if (jj_scan_token(commaToken)) return true;
    if (jj_scan_token(idToken)) return true;
    return false;
  }

  static private boolean jj_3_4() {
    if (jj_scan_token(floatToken)) return true;
    return false;
  }

  static private boolean jj_3R_11() {
    if (jj_3R_14()) return true;
    if (jj_scan_token(idToken)) return true;
    return false;
  }

  static private boolean jj_3_2() {
    if (jj_3R_11()) return true;
    return false;
  }

  static private boolean jj_3_9() {
    if (jj_scan_token(dotToken)) return true;
    if (jj_scan_token(idToken)) return true;
    if (jj_scan_token(openedParenthesisToken)) return true;
    return false;
  }

  static private boolean jj_3_7() {
    if (jj_scan_token(openedBraceToken)) return true;
    if (jj_3R_12()) return true;
    if (jj_scan_token(closedBraceToken)) return true;
    if (jj_3R_13()) return true;
    return false;
  }

  static private boolean jj_3_8() {
    if (jj_scan_token(dotToken)) return true;
    if (jj_scan_token(lengthToken)) return true;
    if (jj_3R_13()) return true;
    return false;
  }

  static private boolean jj_3R_26() {
    if (jj_scan_token(intToken)) return true;
    return false;
  }

  static private boolean jj_3R_24() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_30()) {
    jj_scanpos = xsp;
    if (jj_3_7()) {
    jj_scanpos = xsp;
    if (jj_3_8()) {
    jj_scanpos = xsp;
    if (jj_3_9()) return true;
    }
    }
    }
    return false;
  }

  static private boolean jj_3R_30() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_scan_token(38)) {
    jj_scanpos = xsp;
    if (jj_scan_token(39)) {
    jj_scanpos = xsp;
    if (jj_scan_token(40)) {
    jj_scanpos = xsp;
    if (jj_scan_token(41)) {
    jj_scanpos = xsp;
    if (jj_scan_token(42)) {
    jj_scanpos = xsp;
    if (jj_scan_token(43)) {
    jj_scanpos = xsp;
    if (jj_scan_token(44)) {
    jj_scanpos = xsp;
    if (jj_scan_token(45)) {
    jj_scanpos = xsp;
    if (jj_scan_token(46)) {
    jj_scanpos = xsp;
    if (jj_scan_token(47)) {
    jj_scanpos = xsp;
    if (jj_scan_token(37)) return true;
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    if (jj_3R_12()) return true;
    if (jj_3R_13()) return true;
    return false;
  }

  static private boolean jj_3R_13() {
    Token xsp;
    while (true) {
      xsp = jj_scanpos;
      if (jj_3R_24()) { jj_scanpos = xsp; break; }
    }
    return false;
  }

  static private boolean jj_3R_23() {
    if (jj_scan_token(openedParenthesisToken)) return true;
    if (jj_3R_12()) return true;
    if (jj_scan_token(closedParenthesisToken)) return true;
    if (jj_3R_13()) return true;
    return false;
  }

  static private boolean jj_3R_21() {
    if (jj_scan_token(newToken)) return true;
    if (jj_scan_token(idToken)) return true;
    if (jj_scan_token(openedParenthesisToken)) return true;
    if (jj_scan_token(closedParenthesisToken)) return true;
    return false;
  }

  static private boolean jj_3R_22() {
    if (jj_scan_token(notToken)) return true;
    if (jj_3R_12()) return true;
    if (jj_3R_13()) return true;
    return false;
  }

  static private boolean jj_3_6() {
    if (jj_scan_token(newToken)) return true;
    if (jj_scan_token(intToken)) return true;
    if (jj_scan_token(openedBraceToken)) return true;
    if (jj_3R_12()) return true;
    return false;
  }
